antsurance/force-app/main/default/objects/Quote/fields/Configuration__c.field-meta.xml
<CustomField>
    <fullName>Configuration__c</fullName>
    <description>The answers given in the quote configurator and the price they came to, as JSON. Written by AntsuranceQuoteConfigurator; read it on the quote page rather than here.</description>
    <label>Configuration</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>