antsurance/force-app/main/default/objects/Quote/fields/Days_Since_Issued__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Issued__c</fullName>
    <description>How long the quote has been out. Blank until it is issued.</description>
    <label>Days Since Issued</label>
    <formula><![CDATA[IF(ISBLANK(Issued_Date__c), NULL, TODAY() - Issued_Date__c)]]></formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>