antsurance/force-app/main/default/objects/Quote/fields/Deductible__c.field-meta.xml
<CustomField>
    <fullName>Deductible__c</fullName>
    <description>The deductible offered.</description>
    <label>Deductible</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>