antsurance/force-app/main/default/objects/Quote/fields/Issued_Date__c.field-meta.xml
<CustomField>
    <fullName>Issued_Date__c</fullName>
    <description>When the quote went to the customer or their agent.</description>
    <label>Issued Date</label>
    <type>Date</type>
</CustomField>