antsurance/force-app/main/default/objects/Quote/fields/Needs_Underwriting_Review__c.field-meta.xml
<CustomField>
    <fullName>Needs_Underwriting_Review__c</fullName>
    <description>One or more answers call for an underwriter to look at the quote before it is offered.</description>
    <label>Needs Underwriting Review</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>