antsurance/force-app/main/default/objects/Quote/fields/Option_Summary__c.field-meta.xml
<CustomField>
    <fullName>Option_Summary__c</fullName>
    <description>The option name and its annual premium on one line, for pickers in flows.</description>
    <label>Option Summary</label>
    <formula><![CDATA[IF(ISBLANK(Annual_Premium__c), Name, Name & ", $" & IF(Annual_Premium__c >= 1000, TEXT(FLOOR(Annual_Premium__c / 1000)) & "," & LPAD(TEXT(MOD(FLOOR(Annual_Premium__c), 1000)), 3, "0"), TEXT(FLOOR(Annual_Premium__c))) & " a year")]]></formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <type>Text</type>
</CustomField>