antsurance/force-app/main/default/objects/Quote/fields/Submission_Channel__c.field-meta.xml
<CustomField>
    <fullName>Submission_Channel__c</fullName>
    <description>How the quote request reached Antsurance.</description>
    <label>Channel</label>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>Agent</fullName>
            </value>
            <value>
                <fullName>In Person</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
    <type>Picklist</type>
</CustomField>