antsurance/force-app/main/default/objects/Quote/fields/Underwriter__c.field-meta.xml
<CustomField>
    <fullName>Underwriter__c</fullName>
    <description>Who priced the quote.</description>
    <label>Underwriter</label>
    <length>80</length>
    <type>Text</type>
</CustomField>