antsurance/force-app/main/default/objects/Quote/fields/Underwriting_Decision__c.field-meta.xml
<CustomField>
    <fullName>Underwriting_Decision__c</fullName>
    <description>What the underwriter decided on a quote that was referred for review.</description>
    <label>Underwriting Decision</label>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Approved with Conditions</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
    <type>Picklist</type>
</CustomField>