antsurance/force-app/main/default/objects/Quote/fields/Underwriting_Memo__c.field-meta.xml
<CustomField>
    <fullName>Underwriting_Memo__c</fullName>
    <description>Claude's memo for the underwriter on a referred quote, stored as JSON by the underwriting review component. Redraft it there rather than editing here.</description>
    <label>Underwriting Memo</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>