antsurance/force-app/main/default/objects/Quote/listViews/Open_Quotes.listView-meta.xml
<ListView>
    <fullName>Open_Quotes</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>QUOTE.NAME</columns>
    <columns>QUOTE.STATUS</columns>
    <columns>Annual_Premium__c</columns>
    <columns>Issued_Date__c</columns>
    <columns>QUOTE.EXPIRATIONDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>QUOTE.STATUS</field>
        <operation>equals</operation>
        <value>Draft,Issued,Presented,Accepted</value>
    </filters>
    <label>Open Quotes</label>
</ListView>