antsurance/force-app/main/default/objects/Quote/listViews/Waiting_15_Days.listView-meta.xml
<ListView>
    <fullName>Waiting_15_Days</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>QUOTE.NAME</columns>
    <columns>QUOTE.STATUS</columns>
    <columns>Annual_Premium__c</columns>
    <columns>Issued_Date__c</columns>
    <columns>QUOTE.EXPIRATIONDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>QUOTE.STATUS</field>
        <operation>equals</operation>
        <value>Issued,Presented</value>
    </filters>
    <filters>
        <field>Days_Since_Issued__c</field>
        <operation>greaterOrEqual</operation>
        <value>15</value>
    </filters>
    <label>Waiting 15 Days or More</label>
</ListView>